Cloud Native PostgreSQL  - History of user-visible changes
Copyright (C) 2019-2020 2ndQuadrant Italia SRL. Exclusively licensed to 2ndQuadrant Limited.

Version 0.3.0 - TODO

- Remove EmptyDir storage support
- Remove "unusable" annotation support, now PVC can just be removed followed
  by a deletion of the corresponding Pod

Version 0.2.0 - 11 Aug 2020

- PostgreSQL 10 and 11 are now supported, in addition to PostgreSQL 12
- Usage of UBI as base image of the operator (OpenShift support)
- New Backup and ScheduledBackup CRD, allowing users to take a physical backup
  of the cluster in an object store that complies with the S3 protocol (such as
  AWS S3, MinIO, MinIO Gateway)
- Support for WAL archiving to an object store that complies with the S3 protocol
- Improvements in the E2e tests infrastructure
- Bug fixes and minor improvements

Version 0.1.0 -  3 Apr 2020

- Reuse of existing persistent storage with Pods (required for rolling updates)
- Independence between operator container image and PostgreSQL container image
  (required by rolling updates) - this enables usage of Community PostgreSQL images
- Rolling updates for the update of the operator and the entire cluster
  to a new version of PostgreSQL, by updating all the replicas first;
  switchover can be entirely managed by Kubernetes once replicas have been
  updated (`unsupervised` option), or manually triggered by the user (`supervised` option)
- Check framework for update-in-progress of a Pod
- Improvements in cluster status information
- E2E tests for Kubernetes 1.18
- E2E performance tests for failover (< 5 seconds)
- Improvements in E2E tests for switchover
- Support for PostgreSQL's `cluster_name` GUC
- New documentation section `Exposing Postgres services`
- New documentation section `Security`

Version 0.0.1 -  5 Mar 2020

Prototype of PostgreSQL Operator with:

* PostgreSQL 12.2 container image
* Self-Healing capability, through: