@@ -15,8 +15,22 @@ import (
 	"gitlab.2ndquadrant.com/k8s/cloud-native-postgresql/api/v1alpha1"
 )
 
+const defaultHbaContent = `
+# Grant local access
+local all all peer
+
+# Require md5 authentication elsewhere
+host all all all md5
+host replication all all md5
+`
+
 // CreatePostgresConfigMap create a configMap for this cluster
 func CreatePostgresConfigMap(cluster *v1alpha1.Cluster) *corev1.ConfigMap {
+	hbaContent := strings.Join(cluster.Spec.PostgresConfiguration.PgHBA, "\n")
+	if hbaContent == "" {
+		hbaContent = defaultHbaContent
+	}
+
 	return &corev1.ConfigMap{
 		ObjectMeta: metav1.ObjectMeta{
 			Name:      cluster.Name,
@@ -24,7 +38,7 @@ func CreatePostgresConfigMap(cluster *v1alpha1.Cluster) *corev1.ConfigMap {
 		},
 		Data: map[string]string{
 			"postgresConfiguration": strings.Join(cluster.Spec.PostgresConfiguration.Parameters, "\n"),
-			"postgresHBA":           strings.Join(cluster.Spec.PostgresConfiguration.PgHBA, "\n"),
+			"postgresHBA":           hbaContent,
 		},
 	}
 }
