@@ -31,7 +31,7 @@ var _ = Describe("Cluster", func() {
 	// last row written on timeline 1 and the first one on timeline 2
 	Context("Cluster primary fails over in less than five seconds", func() {
 		const namespace = "primary-failover-time"
-		const sampleFile = samplesDir + "/cluster-example.yaml"
+		const sampleFile = "./fixtures/fastfailover/cluster-example.yaml"
 		const clusterName = "cluster-example"
 		BeforeEach(func() {
 			if err := env.CreateNamespace(namespace); err != nil {
